--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,2 +1,7 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+html::view-transition-old(root),
+html::view-transition-new(root) {
+  animation-duration: 1s; /* Change to your desired duration */
+}
