Building the User Interface

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui"{
+  themes:all;
+};
 
 html::view-transition-old(root),
 html::view-transition-new(root) {
